--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Isabella Grey - Personal Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <header>
+            <h1>Isabella Grey</h1>
+            <nav class="social-links">
+                <a href="https://x.com/Isa_flex" target="_blank">X (Formerly Twitter)</a>
+                <a href="https://www.instagram.com/is_a_bellaflex" target="_blank">Instagram</a>
+                <a href="https://github.com/geekyisa" target="_blank">GitHub</a>
+            </nav>
+        </header>
+        <main>
+            <section class="intro">
+                <h2>Welcome to My Personal Website</h2>
+                <p>Hi there! I'm Isabella Grey, and this is my personal space on the web. Feel free to connect with me on social media or learn more about me here.</p>
+            </section>
+            <section class="donation">
+                <h3>Support My Work</h3>
+                <p>If you appreciate my work and would like to support me, you can make a donation in Bitcoin. Here is my BTC wallet address:</p>
+                <p class="wallet-address"><strong>bc1qmz6c5a2axy2kr52jpdjqtqgvrnkqzns6t0qwwp</strong></p>
+                <p><a href="bitcoin:bc1qmz6c5a2axy2kr52jpdjqtqgvrnkqzns6t0qwwp" class="donate-btn">Send Bitcoin</a></p>
+            </section>
+            <section class="guide">
+                <h3>How to Buy Bitcoin and Donate</h3>
+                <p>If you're new to Bitcoin and want to donate, here's a quick guide:</p>
+                <ol>
+                    <li><strong>Choose an Exchange:</strong> Sign up on a cryptocurrency exchange like Coinbase, Binance, or Kraken.</li>
+                    <li><strong>Verify Your Account:</strong> Complete the necessary verification process on the exchange.</li>
+                    <li><strong>Buy Bitcoin:</strong> Deposit USD/GBP and purchase Bitcoin.</li>
+                    <li><strong>Send Bitcoin:</strong> Transfer the purchased Bitcoin to my wallet address provided above.</li>
+                </ol>
+                <p>Thank you for your support!</p>
+            </section>
+        </main>
+    </div>
+</body>
+</html>
