--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,27 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isabella Grey - Personal Website</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>Isabella Grey</h1>
-            <nav class="social-links">
-                <a href="https://x.com/Isa_flex" target="_blank">X (Formerly Twitter)</a>
-                <a href="https://www.instagram.com/is_a_bellaflex" target="_blank">Instagram</a>
-                <a href="https://github.com/geekyisa" target="_blank">GitHub</a>
-            </nav>
+            <div class="header-content">
+                <div class="salutation">Welcome to My Webpage! ❤️</div>
+                <div class="header-text">
+                    <h1>Isabella Grey</h1>
+                    <nav class="social-links">
+                        <a href="https://www.instagram.com/yourusername" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </nav>
+                </div>
+                <img src="profile.png" alt="Your Profile Picture" class="profile-pic">
+            </div>
         </header>
         <main>
             <section class="intro">
-                <h2>Welcome to My Personal Website</h2>
-                <p>Hi there! I'm Isabella Grey, and this is my personal space on the web. Feel free to connect with me on social media or learn more about me here.</p>
+                <h2>About Me</h2>
+                <p>Hi there! I'm Isabella Grey, and this is my personal webspace. Feel free to connect with me on social media or learn more about me here.</p>
             </section>
             <section class="donation">
                 <h3>Support My Work</h3>
                 <p>If you appreciate my work and would like to support me, you can make a donation in Bitcoin. Here is my BTC wallet address:</p>
-                <p class="wallet-address"><strong>bc1qmz6c5a2axy2kr52jpdjqtqgvrnkqzns6t0qwwp</strong></p>
-                <p><a href="bitcoin:bc1qmz6c5a2axy2kr52jpdjqtqgvrnkqzns6t0qwwp" class="donate-btn">Send Bitcoin</a></p>
+                <p class="wallet-address"><strong>1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa</strong></p>
+                <p><a href="bitcoin:1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa" class="donate-btn">Send Bitcoin</a></p>
             </section>
             <section class="guide">
                 <h3>How to Buy Bitcoin and Donate</h3>
@@ -37,8 +43,8 @@
                     <li><strong>Buy Bitcoin:</strong> Deposit USD/GBP and purchase Bitcoin.</li>
                     <li><strong>Send Bitcoin:</strong> Transfer the purchased Bitcoin to my wallet address provided above.</li>
                 </ol>
-                <p>Thank you for your support!</p>
             </section>
+            <p class="gratitude">Thank you for reading! ❤️❤️</p>
         </main>
     </div>
 </body>
