--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="container">
         <header>
             <div class="header-content">
-                <div class="salutation">Welcome to My Webpage! ❤️</div>
+                <div class="salutation">Welcome to My Webpage! 😊</div>
                 <div class="header-text">
                     <h1>Isabella Grey</h1>
                     <nav class="social-links">
-                        <a href="https://www.instagram.com/yourusername" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://twitter.com/yourusername" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/is_a_bellaflex" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a href="https://github.com/geekyisa" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://x.com/Isa_Flex" target="_blank"><i class="fab fa-twitter"></i></a>
                     </nav>
                 </div>
                 <img src="profile.png" alt="Your Profile Picture" class="profile-pic">
