--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <main>
             <section class="intro">
                 <h2>About Me</h2>
-                <p>Hi there! I'm Isabella Grey, and this is my personal webspace. Feel free to connect with me on social media or learn more about me here.</p>
+                <p>Hi there! I'm Isabella Grey, and this is my personal webspace. Feel free to connect with me on social media and learn more about me.</p>
             </section>
             <section class="donation">
                 <h3>Support My Work</h3>
@@ -36,11 +36,11 @@
             </section>
             <section class="guide">
                 <h3>How to Buy Bitcoin and Donate</h3>
-                <p>If you're new to Bitcoin and want to donate, here's a quick guide:</p>
+                <p>If you're <strong>new</strong> to Bitcoin and want to donate, here's a quick guide:</p>
                 <ol>
-                    <li><strong>Choose an Exchange:</strong> Sign up on a cryptocurrency exchange like Coinbase, Binance, or Kraken.</li>
+                    <li><strong>Choose an Exchange:</strong> Sign up on a cryptocurrency exchange like <strong>Coinbase</strong>, <strong>Binance</strong>, or <strong>Kraken</strong>.</li>
                     <li><strong>Verify Your Account:</strong> Complete the necessary verification process on the exchange.</li>
-                    <li><strong>Buy Bitcoin:</strong> Deposit USD/GBP and purchase Bitcoin.</li>
+                    <li><strong>Buy Bitcoin:</strong> Deposit your preferred currency and purchase Bitcoin.</li>
                     <li><strong>Send Bitcoin:</strong> Transfer the purchased Bitcoin to my wallet address provided above.</li>
                 </ol>
             </section>
