--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header>
             <div class="header-content">
-                <div class="salutation">Welcome to My Webpage! 😊</div>
+                <div class="salutation"><strong>Welcome to My Webpage! 😊</strong></div>
                 <div class="header-text">
                     <h1>Isabella Grey</h1>
                     <nav class="social-links">
@@ -26,23 +26,24 @@
         <main>
             <section class="intro">
                 <h2>About Me</h2>
-                <p>Hi there! I'm Isabella Grey, and this is my personal webspace. Feel free to connect with me on social media and learn more about me.</p>
+                <p>Hi there! I'm Isabella Grey, and this is my personal webspace. I am a Fitness Influencer on Instagram and an Aspiring model. I love to go on adventures, play cricket and go to the gym regularly. Feel free to connect with me on social media and learn more.</p>
             </section>
             <section class="donation">
-                <h3>Support My Work</h3>
-                <p>If you appreciate my work and would like to support me, you can make a donation in Bitcoin. Here is my BTC wallet address:</p>
+                <h3>Support Me</h3>
+                <p>If you appreciate what I do and would like to support me, you can make a donation in Bitcoin. I would be extremely grateful to y'all ❤️😊. Here is my BTC wallet address:</p>
                 <p class="wallet-address"><strong>1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa</strong></p>
                 <p><a href="bitcoin:1A1zP1eP5QGefi2DMPTfTL5SLmv7DivfNa" class="donate-btn">Send Bitcoin</a></p>
             </section>
             <section class="guide">
-                <h3>How to Buy Bitcoin and Donate</h3>
-                <p>If you're <strong>new</strong> to Bitcoin and want to donate, here's a quick guide:</p>
+                <h3>How to Donate Bitcoin (If you are a beginner):</h3>
+                <p>If you're <strong>new</strong> to Bitcoin, no worries! Here's a quick guide:</p>
                 <ol>
-                    <li><strong>Choose an Exchange:</strong> Sign up on a cryptocurrency exchange like <strong>Coinbase</strong>, <strong>Binance</strong>, or <strong>Kraken</strong>.</li>
+                    <li><strong>Choose an Exchange:</strong> Sign up on a cryptocurrency exchange like <strong>Coinbase</strong>, <strong>Binance</strong>, or <strong>Kraken</strong>. 
+                    </li>
                     <li><strong>Verify Your Account:</strong> Complete the necessary verification process on the exchange.</li>
-                    <li><strong>Buy Bitcoin:</strong> Deposit your preferred currency and purchase Bitcoin.</li>
-                    <li><strong>Send Bitcoin:</strong> Transfer the purchased Bitcoin to my wallet address provided above.</li>
+                    <li><strong>Send Bitcoin:</strong> Deposit Bitcoin to my wallet address provided above.</li>
                 </ol>
+                <p class="recommendation">I'd recommend <strong>Coinbase</strong> as it is the easiest. <a href="https://www.youtube.com/watch?v=Mn7gQKMegBo" class="coin">2-min Video Guide</a></p>
             </section>
             <p class="gratitude">Thank you for reading! ❤️❤️</p>
         </main>
